Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
-	<title>Will you be my Valentine?</title>
+	<title>Plus One:)</title>
 	<style>
 		/* ===== Color palette & base ===== */
 		:root{
@@ -177,7 +177,7 @@
 <body>
 	<div class="card" role="main">
 		<h1>Will you be my Valentine? <span aria-hidden="true">💖</span></h1>
-		<p class="lead" id="subtext">I promise unlimited love, laughter, and snacks.</p>
+		<p class="lead" id="subtext">I promise unlimited cuddles, laughter, and kenkey:).</p>
 
 		<div class="buttons" aria-hidden="false">
 			<button class="yes" id="yesBtn" aria-label="Yes, I'll be your Valentine">Yes 💘</button>
@@ -530,4 +530,5 @@
 		</script>
 </body>
 </html>
+
 
