--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
 		// Use name in the subtext if provided
 		if(gfName && gfName.trim() !== ''){
-			subtext.textContent = `I promise unlimited love, laughter, and snacks, ${gfName}.`;
+			subtext.textContent = `I promise unlimited love, cuddles, and kenkey:), ${gfName}.`;
 			personalLine.textContent = `— ${gfName} 💕`;
 		}
 
@@ -530,5 +530,6 @@
 		</script>
 </body>
 </html>
+
 
 
