Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 				// heading
 				ctx.fillStyle = '#3b2b2b'; ctx.font = '24px system-ui'; ctx.textAlign='center';
 				ctx.fillText('Will you be my Valentine? 💖', w/2, 56);
-				ctx.fillStyle = '#5b3b3f'; ctx.font = '14px system-ui'; ctx.fillText('I promise unlimited love, laughter, and snacks.', w/2, 86);
+				ctx.fillStyle = '#5b3b3f'; ctx.font = '14px system-ui'; ctx.fillText('I promise unlimited love, cuddles, and kenkey:).', w/2, 86);
 
 				// yes button
 				ctx.fillStyle = '#ff6f91'; roundRect(ctx, yes.x, yes.y, yes.w, yes.h, 12, true);
@@ -530,6 +530,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
