Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 	<!-- Success overlay (hidden until yes) -->
 	<div class="success" id="success">
 		<div class="success-card" role="dialog" aria-modal="true" aria-labelledby="successTitle">
-			<h2 id="successTitle">YAY!! 💕 I knew you’d say yes!</h2>
+			<h2 id="successTitle">YAY!! 💕I guess we’re stuck being adorable together now 😁💖</h2>
 			<p id="personalLine"></p>
 		</div>
 	</div>
@@ -206,7 +206,7 @@
 		*/
 
 		// Personalization: set your girlfriend's name here
-		const gfName = 'Love'; // <-- change this to her name (e.g., 'Emma')
+		const gfName = 'Plus One:)'; // <-- change this to her name (e.g., 'Emma')
 
 		const yesBtn = document.getElementById('yesBtn');
 		const noBtn = document.getElementById('noBtn');
@@ -530,6 +530,7 @@
 		</script>
 </body>
 </html>
+
 
 
 
